--- a/Artist.html
+++ b/Artist.html
@@ -68,7 +68,7 @@ div {text-align: center;}
 <br>
 <font color=#FAFAFA size=7 face=Playfair>
 <p>
-<a href=Me.html>Back to Homepage</a>
+<a href=index.html>Back to Homepage</a>
 </p>
 <br>
 <br>
