--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>Portfolio</title>
+<title>Who is Jaycel Delos Reyes?</title>
+</head>
 
 <style>
 h1,h2, h3, h4 {text-align: center;}
@@ -24,51 +25,22 @@ div {text-align: center;}
         <a href=Contact.html>Contact Us</a> </h3> &nbsp&nbsp&nbsp
 <hr> </hr>
 
-<br>
-<br>
-<br>
-<br>
 
-</head>
-<body bgcolor=#FAFAFA>
 <div>
-<img src=38.png width=1020 height=600> <br>
-<a href="https://www.facebook.com/thessaloniansingingambassadors">THESSALONIAN EVANGELICAL SINGERS APOSTOLATE</a> <br> <br> <br> <br>
-<img src= 50.png> <br>
-<a href="https://www.facebook.com/ChristFormationCenterInc/posts/pfbid0feBKsKzu42BQBMdwrGw4ECUrp952emXvNaQUT6tzrr7sSXgX5oEND2SSb5P43KNEl">BARANGAY 'RAK</a>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<a href=RESUMEE.html>View Full Portfolio</a> </h3>
-</div>
-
+<img src=meet.png size= width=1920 height=1080>
+</div> 
 
 <br>
+<h3> "Where the spirit does not work with the hand, there is no art." -Leonardo da Vinci </h3>
 <br>
 <br>
 <br>
 <br>
 <br>
-<br>
-<font color=#444444 size=3 face=Playfair>
-<p>
-<a href=index.html>Back to Homepage</a>
-</p>
-<br>
-<br>
-<br>
+<font color=#FAFAFA border=red size=6>
 <h4> © 2025 Jaycel Delos Reyes Studio. All Rights Reserved.</h4>
-
 
 </body>
 </head>
 
-</html>	 
-
-
-
+</html>
