--- a/pricelist.html
+++ b/pricelist.html
@@ -108,7 +108,7 @@ div {text-align: center;}
 
 <font color=black size=3 face=Playfair>
 <p>
-<a href=Me.html>Back to Homepage</a>
+<a href=index.html>Back to Homepage</a>
 </p>
 <br>
 <br>
