--- a/services.html
+++ b/services.html
@@ -74,7 +74,7 @@ Bringing your stories to life through high-quality editing, engaging cuts, trans
 <br>
 <font color=white size=3 face=Playfair>
 <p>
-<a href=Me.html>Back to Homepage</a>
+<a href=index.html>Back to Homepage</a>
 </p>
 <br>
 <br>
