--- a/Artist.html
+++ b/Artist.html
@@ -16,8 +16,8 @@ div {text-align: center;}
 <br>
 <font color=#FAFAFA border=red size=6>
 
-        <h3> <a href=artist.html>About the Artist</a> &nbsp&nbsp&nbsp
-        <a href=portfolio.html>Graphics</a> &nbsp&nbsp&nbsp
+        <h3> <a href=Artist.html>About the Artist</a> &nbsp&nbsp&nbsp
+        <a href=Portfolio.html>Graphics</a> &nbsp&nbsp&nbsp
 		<a href=artist.html>Video Graphics</a> &nbsp&nbsp&nbsp
 		
         <b>&nbsp&nbsp&nbsp&nbsp Jaycel Delos Reyes</b> Studio &nbsp&nbsp&nbsp&nbsp
@@ -78,5 +78,6 @@ div {text-align: center;}
 
 </body>
 </head>
+
 
 </html>	 
