--- a/Artist.html
+++ b/Artist.html
@@ -18,7 +18,7 @@ div {text-align: center;}
 
         <h3> <a href=Artist.html>About the Artist</a> &nbsp&nbsp&nbsp
         <a href=Portfolio.html>Graphics</a> &nbsp&nbsp&nbsp
-		<a href=artist.html>Video Graphics</a> &nbsp&nbsp&nbsp
+		<a href=videographicss.html>Video Graphics</a> &nbsp&nbsp&nbsp
 		
         <b>&nbsp&nbsp&nbsp&nbsp Jaycel Delos Reyes</b> Studio &nbsp&nbsp&nbsp&nbsp
 
@@ -81,3 +81,4 @@ div {text-align: center;}
 
 
 </html>	 
+
