--- a/services.html
+++ b/services.html
@@ -13,8 +13,8 @@ p {text-align: center;}
 <br>
 <font color=#FAFAFA border=red size=6>
 
-        <h3> <a href=artist.html>About the Artist</a> &nbsp&nbsp&nbsp
-        <a href=portfolio.html>Graphics</a> &nbsp&nbsp&nbsp
+        <h3> <a href=Artist.html>About the Artist</a> &nbsp&nbsp&nbsp
+        <a href=Portfolio.html>Graphics</a> &nbsp&nbsp&nbsp
 		<a href=videographicss.html>Video Graphics</a> &nbsp&nbsp&nbsp
 		
         <b>&nbsp&nbsp&nbsp&nbsp Jaycel Delos Reyes</b> Studio &nbsp&nbsp&nbsp&nbsp
@@ -84,5 +84,6 @@ Bringing your stories to life through high-quality editing, engaging cuts, trans
 
 </body>
 </head>
+
 
 </html>	 
