--- a/Artist.html
+++ b/Artist.html
@@ -11,12 +11,12 @@ div {text-align: center;}
 
 </head>
 
-<body bgcolor=black>
+<body background=bg.jpg>
 <br>
 <br>
 <font color=#FAFAFA border=red size=6>
 
-        <h3> <a href=Artist.html>About the Artist</a> &nbsp&nbsp&nbsp
+       <h3> <a href=Artist.html>About the Artist</a> &nbsp&nbsp&nbsp
         <a href=Portfolio.html>Graphics</a> &nbsp&nbsp&nbsp
 		<a href=videographicss.html>Video Graphics</a> &nbsp&nbsp&nbsp
 		
@@ -79,6 +79,4 @@ div {text-align: center;}
 </body>
 </head>
 
-
 </html>	 
-
