--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ p {text-align: center;}
 div {text-align: center;}
 </style>
 
-<body bgcolor=black>
+<body background=bg.jpg>
 <br>
 <br>
 <font color=#FAFAFA border=red size=6>
