--- a/pricelist.html
+++ b/pricelist.html
@@ -9,7 +9,7 @@ div {text-align: center;}
 
 </style>
 
-<body bgcolor=white>
+<body background=gb.jpg>
 <br>
 <br>
 <font color=white border=red size=6>
@@ -17,9 +17,9 @@ div {text-align: center;}
         <h3> <a href=Artist.html>About the Artist</a> &nbsp&nbsp&nbsp
         <a href=Portfolio.html>Graphics</a> &nbsp&nbsp&nbsp
 		<a href=videographicss.html>Video Graphics</a> &nbsp&nbsp&nbsp
-		
+<font color=black border=red size=6>
         <b>&nbsp&nbsp&nbsp&nbsp Jaycel Delos Reyes</b> Studio &nbsp&nbsp&nbsp&nbsp
-
+<font color=white border=red size=6>
         <a href=services.html>Services</a> &nbsp&nbsp&nbsp
         <a href=pricelist.html>Price List</a> &nbsp&nbsp&nbsp
         <a href=Contact.html>Contact Us</a> </h3> &nbsp&nbsp&nbsp
@@ -121,5 +121,4 @@ div {text-align: center;}
 </head>
 
 </html>	
-
 
