--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@ p {text-align: center;}
 
 </style>
 
-<body bgcolor=black>
+<body background=bg.jpg>
 <br>
 <br>
 <font color=#FAFAFA border=red size=6>
@@ -84,6 +84,5 @@ Bringing your stories to life through high-quality editing, engaging cuts, trans
 
 </body>
 </head>
-
 
 </html>	 
