--- a/videographicss.html
+++ b/videographicss.html
@@ -8,7 +8,7 @@ p {text-align: center;}
 div {text-align: center;}
 </style>
 
-<body bgcolor=black>
+<body background=bg.jpg>
 <br>
 <br>
 <font color=#FAFAFA border=red size=6>
@@ -61,7 +61,7 @@ div {text-align: center;}
 <br>
 <br>
 
-<a href=RESUMEE.html>View Full Portfolio</a> </h3>
+<a href=Resume.html>View Full Portfolio</a> </h3>
 </div>
 
 <br>
