--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@ p {text-align: center;}
 
 </style>
 
-<body bgcolor=black>
+<body background=bg.jpg>
 <br>
 <br>
 <font color=#FAFAFA border=red size=6>
